--- a/src/main/webapp/WEB-INF/views/inc/top.jspf
+++ b/src/main/webapp/WEB-INF/views/inc/top.jspf
@@ -5,30 +5,37 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>SaveEarthUs</title>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src = "/js_css/script.js"></script>
 <link rel = "stylesheet" href = "/js_css/style.css" type = "text/css">
 <style>
 </style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
 <header id = "seu_header">
 	<div id = "top_container">
 		<div id = "top_left">
-			<h1 class = "logo">logo</h1>
-			<ul class = "top_menu">
+			<a href="/"><img src="/img/care.png" title="SEU" id="logo_img"/></a>
+			<ul id ="top_menu">
 				<li><a href="#">소개</a></li>
 				<li><a href="#">활동</a></li>
-				<li><a href="#">소식</a></li>
+				<li><a href="/news/newsList">소식</a></li>
 				<li><a href="#">자료</a></li>
 				<li><a href="#">후원</a></li>
 			</ul>
 		</div>
 		<div id = "top_right">
-			<a href="#">질문</a>
-			<a href="#">로그인</a>
-			<a href="#">후원하기</a>
+			<a href="#" class="top_right_menu">질문</a>
+			<c:if test="${logStatus!='Y' }">
+				<a href="/member/login" class="top_right_menu">로그인</a>
+			</c:if>
+			<c:if test="${logStatus=='Y' }">
+				<a href="/member/mypage">마이페이지</a>
+				<a href="/member/logout">로그아웃</a>
+			</c:if>
+			<a href="#" class="dn_btn">후원하기</a>
 		</div>
 	</div>
 </header>
